opam-version: "2.0"
name: "gitmaildir_unix"
version: "~dev"
synopsis: "Modules shared by gitmaildir unix client and daemon"
maintainer: "Oliver Hope <oliverdnhope@gmail.com>"
authors: "Oliver Hope <oliverdnhope@gmail.com>"
license: "ISC License"
homepage: "https://github.com/odnh/gitmaildir"
bug-reports: "https://github.com/odnh/gitmaildir/issues"
dev-repo: "git+https://github.com/odnh/gitmaildir.git"
depends: ["core"]
build: ["dune" "build" "-p" name]
